--- a/config/src/main/resources/application.yml
+++ b/config/src/main/resources/application.yml
@@ -1,6 +1,15 @@
 spring:
   application:
     name: config
+  cloud:
+    config:
+      server:
+        git:
+          uri: https://github.com/zx88cvb/config-repo
+          username: zx88cvb
+          password: ****
+          basedir: D:/Software_Development/Java_Development/WorkSpace/IntelliJ-IDEA-workspace/github/springcloud_sell/config/basedir
+
 eureka:
   client:
     service-url:
