--- a/order/server/pom.xml
+++ b/order/server/pom.xml
@@ -45,6 +45,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-config-client</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.angel</groupId>
             <artifactId>product-client</artifactId>
         </dependency>
