--- a/order/server/pom.xml
+++ b/order/server/pom.xml
@@ -60,6 +60,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-stream-rabbit</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.angel</groupId>
             <artifactId>order-common</artifactId>
         </dependency>
