--- a/order/server/pom.xml
+++ b/order/server/pom.xml
@@ -65,6 +65,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.angel</groupId>
             <artifactId>order-common</artifactId>
         </dependency>
